# nonebot-plugin-marshoai-plugin-alclinker

./: .gitignore  README.md  main.py  pyproject.toml
data/data/nonebot_plugin_marshoai/: nickname.json  praises.json
src/nonebot_plugin_marshoai_plugin_alclinker/: __init__.py  linker.py  utils.py
